Correctifs alignements

--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -93,14 +93,12 @@
     position: absolute;
     bottom: 10%;
     right: 8%;
-    // transform: translate(-70%, -100%);
     transition: 1.5s ease-out;
   }
   & .empty-heart {
     position: absolute;
     bottom: 10%;
     right: 8%;
-    // transform: translate(-70%, -100%);
     transition: 0.5s ease-in-out;
   }
   &:hover {
@@ -113,8 +111,6 @@
     }
   }
   &.menu__heart {
-    flex: 1;
-
     & .full-heart,
     .empty-heart {
       font-size: 29px;
