--- a/pages/_menu.scss
+++ b/pages/_menu.scss
@@ -33,12 +33,6 @@
       padding-left: 0;
     }
   }
-  @media only screen and (min-width: 1244px) {
-    & h2 {
-      justify-content: center;
-      flex: 28;
-    }
-  }
 }
 
 .menu__body {
